--- a/Clase 9/practicas/package.json
+++ b/Clase 9/practicas/package.json
@@ -23,5 +23,8 @@
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "reflect-metadata": "^0.1.13"
   }
 }
